Fixed weird issues with the body tag not stretching to the size of the screen

--- a/app/ui/styles/app.global.css
+++ b/app/ui/styles/app.global.css
@@ -10,6 +10,8 @@
 body {
     overflow: hidden;
     font-family: 'Cambay';
+    height: 100vh;
+    width: 100vh;
 }
 
 /* Create the scroll-bar design */
